solving overflow bug in contact feature. It was cause because wrong margin on contact component. Removed it and it works

--- a/src/app/features/contact/contact.component.scss
+++ b/src/app/features/contact/contact.component.scss
@@ -1,7 +1,7 @@
 @use '../../../styles.scss' as *;
 
 .contact{
-    margin: $header-size 0;
     display: flex;
     flex-direction: column;
+    max-height: fit-content;
 }
