--- a/src/app/shared/components/navbar/navbar.component.scss
+++ b/src/app/shared/components/navbar/navbar.component.scss
@@ -27,7 +27,6 @@ header{
     z-index: 5;
     background-color: rgba(0, 0, 0, 0.5);
     backdrop-filter: blur(.5rem);
-    overflow: visible;
 }
 .logo{
     font-family: Yellowtail;
